syntax = "proto3";

package cafm.identity.user_group;

import "identity/user_group.proto";
import "order.proto";

message UserGroupAppService_userGroupByNameRequest {
  string name = 1;
}

message UserGroupAppService_userGroupByNameResponse {
  UserGroup userGroup = 1;
}

message UserGroupAppService_userGroupByIdRequest {
  string id = 1;
}

message UserGroupAppService_userGroupByIdResponse {
  UserGroup userGroup = 1;
}

message UserGroupAppService_userGroupsRequest {
  int32 resultFrom = 1;
  int32 resultSize = 2;
  repeated cafm.common.order.Order order = 3;
}

message UserGroupAppService_userGroupsResponse {
  repeated UserGroup userGroups = 1;
  int32 itemCount = 2;
}

message UserGroupAppService_newIdRequest {}

message UserGroupAppService_newIdResponse {
  string id = 1;
}


service UserGroupAppService {
  rpc userGroupByName (UserGroupAppService_userGroupByNameRequest) returns (UserGroupAppService_userGroupByNameResponse) {}
  rpc userGroupById (UserGroupAppService_userGroupByIdRequest) returns (UserGroupAppService_userGroupByIdResponse) {}
  rpc userGroups (UserGroupAppService_userGroupsRequest) returns (UserGroupAppService_userGroupsResponse) {}
  rpc newId (UserGroupAppService_newIdRequest) returns (UserGroupAppService_newIdResponse) {}
}